--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="theme-color" content="#1a1a2e">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="apple-mobile-web-app-title" content="ZioonaTV" />
+    
+    <!-- Favicon & Touch Icons (Updated with your Image) -->
+    <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/adlfgoz1k6wklh6lgwxl4/IMG_9211.PNG?rlkey=l3sw09r3soupyv2iyik29q1y4&st=cjuu5yoj&raw=1" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.dropbox.com/scl/fi/adlfgoz1k6wklh6lgwxl4/IMG_9211.PNG?rlkey=l3sw09r3soupyv2iyik29q1y4&st=cjuu5yoj&raw=1" />
+    <link rel="shortcut icon" href="https://www.dropbox.com/scl/fi/adlfgoz1k6wklh6lgwxl4/IMG_9211.PNG?rlkey=l3sw09r3soupyv2iyik29q1y4&st=cjuu5yoj&raw=1" />
 
     <!-- Libraries -->
     <script src="https://cdn.tailwindcss.com"></script>
